# Simple-CUDA-Parallel

./: .gitignore  README.md  vector_add  vector_add.cu
CUDA_MLP/: CMakeLists.txt  README.md  questions.md
CUDA_MLP/data/: README.md
CUDA_MLP/include/: cuda_functions.h  cuda_mlp.h  functions.h  mlp.h
CUDA_MLP/src/: cuda_functions.cu  cuda_mlp.cu  functions.cpp  main.cu  main_seq.cpp  mlp.cpp
Filter/: README.md  compare  compare.cu  parallel_filter  parallel_filter.cu  seq_filter  seq_filter.cpp
Matrix/: compare  compare.cu  mm_parallel  mm_parallel.cu  mm_seq  mm_seq.cpp  mm_shared  mm_shared.cu
